--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/service-worker": "^17.1.0",
+    "@vercel/speed-insights": "^1.0.10",
     "ngx-cookie-service": "^17.1.0",
     "preline": "^2.1.0",
     "rxjs": "~7.8.0",
